# mod_proxy_jwt_auth

./: .dockerignore  AUTHORS  ChangeLog  Dockerfile  Dockerfile.rpmbuild  LICENSE  Makefile.am  README.md  build.sh  build_rpm.sh  configure.ac  docker-compose.test.yml  mod_proxy_jwt_auth.c  mod_request_env_jwt.c  test.sh
rpm_specs/: libjwt.spec  mod_proxy_jwt_auth.spec  mod_request_env_jwt.spec
test/module_test_suite/: .rubocop.yml  Dockerfile  Gemfile  README.md
test/module_test_suite/lib/: algorithms.rb
test/module_test_suite/spec/: mod_proxy_jwt_auth_spec.rb  mod_request_env_jwt_spec.rb  spec_helper.rb
test/test_httpd/: Dockerfile  docker_starter.sh
test/test_sinatra_app/: Dockerfile  README.md
test/test_sinatra_app/app/: .rubocop.yml  Gemfile  test_app.rb
